--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,7 +12,7 @@
         <div class="contenedor">
             <img src="../img/IACan Logo.png" alt="Logo" class="logo-style" />
             <h1>Instituto de Adiestramiento Canino</h1>
-            <a href="ingresar"><img src="../img/inicio.png" alt="inicio" id="inicio"/></a>
+            <a href="form-login.html"><img src="../img/inicio.png" alt="inicio" id="inicio"/></a>
         </div>
         <nav>
             <ul>
@@ -24,15 +24,16 @@
         </nav>
     </header>
     <main>
-        <form>
+        <form id="contact">
             <h1>Datos de Contacto</h1>
+            <fieldset class="recuadro">
             <div class="linea">
                 <label for="nombre">Nombre</label>
-                <input size="30" type="text" name="nombre" id="nombre" required>
+                <input size="30" type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre aquí" required>
             </div>
             <div class="linea">
                 <label for="apellido">Apellido</label>
-                <input size="30" type="text" name="apellido" id="apellido" required>    
+                <input size="30" type="text" name="apellido" id="apellido" placeholder="Ingrese su apellido aquí" required>    
             </div>
             <div class="linea">
                 <label for="mail">Correo Electrónico</label>
@@ -42,11 +43,15 @@
                 <label for="phone">Teléfono</label>
                 <input type="number" name="phone" id="phone" placeholder="Ej 11 5555 5555" required>
             </div>
+            <div class="linea">
             <label for="msjType">Mensaje</label>
                 <textarea id="msjType" cols="30" rows="10" placeholder="Su mensaje" required></textarea>
+            </div>
+            </fieldset>   
             <div>
                 <input type="submit" value="Enviar" class="button">
-            </div>   
+            </div>
+            
         </form>
     </main>
     <footer>
@@ -56,7 +61,7 @@
             <p><i>consultas@iacan.com</i></p>
         </div>
         <div class="links">
-            <a href="../adiestramiento_canino.pdf" download>Plan de Estudios</a>
+            <a href="../archivos/Plan de Estudios.pdf" download>Plan de Estudios</a>
             <a href="adiestradores.html">Adiestradores</a>
             <a href="contacto.html" target="_blank">Contacto</a>
         </div>
