--- a/pages/form-adiestrador.html
+++ b/pages/form-adiestrador.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Formulario de registro para adiestradores</title>
-        <link rel="stylesheet" href="style_form.css"
+    <title>Registro para adiestradores</title>
+    <link rel="shortcut icon" href="../img/ico/IACan-Favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
     <header>
@@ -18,7 +19,7 @@
                 <li><a href="../index.html" target="_self">Inicio</a></li>
                 <li><a href="inscripciones.html" target="_self">Inscribite</a></li>
                 <li><a href="adiestradores.html">Adiestradores</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -270,7 +271,7 @@
         <p><i>consultas@iacan.com</i></p>
     </div>
     <div class="links">
-      <a href="../adiestramiento_canino.pdf" download>Plan de Estudios</a>
+      <a href="../archivos/Plan de Estudios.pdf" download>Plan de Estudios</a>
       <a href="adiestradores.html">Adiestradores</a>
       <a href="contacto.html" target="_blank">Contacto</a>
     </div>
