--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -12,7 +12,7 @@
       <div class="contenedor">
         <img src="../img/IACan Logo.png" alt="Logo" class="logo-style" />
         <h1>Instituto de Adiestramiento Canino</h1>
-        <a href="ingresar"><img src="../img/inicio.png" alt="inicio" id="inicio"/></a>
+        <a href="form-login.html"><img src="../img/inicio.png" alt="inicio" id="inicio"/></a>
       </div>
       <nav>
         <ul>
@@ -148,7 +148,7 @@
             <a href="form-alumno.html" target="_blank">Inscribite</a>
           </div>
           <div class="boton">
-            <a href="../archivos/adiestramiento_canino.pdf" download>Plan de Estudios</a>
+            <a href="../archivos/Plan de Estudios.pdf" download>Plan de Estudios</a>
           </div>
         </div>
       </section>        
@@ -160,7 +160,7 @@
         <p><i>consultas@iacan.com</i></p>
       </div>
       <div class="links">
-        <a href="../adiestramiento_canino.pdf" download>Plan de Estudios</a>
+        <a href="../archivos/Plan de Estudios.pdf" download>Plan de Estudios</a>
         <a href="adiestradores.html">Adiestradores</a>
         <a href="contacto.html" target="_blank">Contacto</a>
       </div>
