--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="shortcut icon" href="img/ico/IACan-Favicon.ico" type="image/x-icon"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
-
     <link rel="stylesheet" href="css/style.css" />
 
   </head>
@@ -16,7 +15,7 @@
       <div class="contenedor">
         <img src="img/IACan Logo.png" alt="Logo" class="logo-style" />
         <h1>Instituto de Adiestramiento Canino</h1>
-        <a href="ingresar"><img src="img/inicio.png" alt="inicio" id="inicio"/></a>
+        <a href="pages/form-login.html"><img src="img/inicio.png" alt="inicio" id="inicio"/></a>
       </div>
       <nav>
         <ul>
