--- a/pages/form-alumno.html
+++ b/pages/form-alumno.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style_form.css">
-    <title>Formulario de registro de alumno</title>
+    <title>Registro de alumno</title>
+    <link rel="shortcut icon" href="../img/ico/IACan-Favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
     <header>
@@ -18,13 +19,13 @@
                 <li><a href="../index.html" target="_self">Inicio</a></li>
                 <li><a href="inscripciones.html" target="_self">Inscribite</a></li>
                 <li><a href="adiestradores.html">Adiestradores</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <form class="alumnos_adiest">
-            <h2>Formulario de registro de alumno</h2>
+            <h2>Formulario de registro de alumnos</h2>
             <fieldset class="recuadro">
             <legend>Datos personales</legend>
             <div class="dato_u">
@@ -104,21 +105,23 @@
 </main>
 <footer>
     <div class="datos">
-        <h3>Contactanos</h3>
-        <p>Lavalle 1334 - CABA</p>
-        <p><i>consultas@iacan.com</i></p>
+      <h3>Contactanos</h3>
+      <p>Lavalle 1334 - CABA</p>
+      <p><i>consultas@iacan.com</i></p>
     </div>
     <div class="links">
-      <a href="../adiestramiento_canino.pdf" download>Plan de Estudios</a>
+      <a href="../archivos/Plan de Estudios.pdf" download>Plan de Estudios</a>
       <a href="adiestradores.html">Adiestradores</a>
       <a href="contacto.html" target="_blank">Contacto</a>
     </div>
     <div class="red">
       <h4>Nuestras Redes Sociales</h4>
-      <a href="#"><img src="../img/whatsapp.png" alt="whatsapp"></a>
-      <a href="#"><img src="../img/facebook.png" alt="facebook"></a>
-      <a href="#"><img src="../img/instagram.png" alt="instagram"></a>
-      <a href="#"><img src="../img/twitter.png" alt="twitter"></a>
+      <div>
+        <a href="#"><img src="../img/whatsapp.png" alt="whatsapp"></a>
+        <a href="#"><img src="../img/facebook.png" alt="facebook"></a>
+        <a href="#"><img src="../img/instagram.png" alt="instagram"></a>
+        <a href="#"><img src="../img/twitter.png" alt="twitter"></a>
+      </div>
     </div>
   </footer>
   </body>
