--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"">
     <title>IACan</title>
     <link rel="shortcut icon" href="img/ico/IACan-Favicon.ico" type="image/x-icon"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css" />
-
   </head>
   <body>
     <header>
@@ -28,41 +25,33 @@
     </header>
     <main>
       <h2>Bienvenido a IACan</h2>
-      <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="2000">
-            <img src="./img/fot1.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item" data-bs-interval="2000">
-            <img src="./img/Foto2.png" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item" data-bs-interval="2000">
-            <img src="./img/Foto3.png" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item" data-bs-interval="2000">
-            <img src="./img/fot2.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item" data-bs-interval="2000">
-            <img src="./img/fot3.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item" data-bs-interval="2000">
-            <img src="./img/fot4.jpg" class="d-block w-100" alt="...">
-          </div>  
-          <div class="carousel-item" data-bs-interval="2000">
-            <img src="./img/fot6.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item" data-bs-interval="2000">
-            <img src="./img/fot9.jpg" class="d-block w-100" alt="...">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+      <div class="slider2">
+        <ul>
+          <li>
+            <img src="img/fot1.jpg" alt="">
+          </li>
+          <li>
+            <img src="img/fot2.jpg" alt="">
+          </li>
+          <li>
+            <img src="img/fot3.jpg" alt="">
+          </li>
+          <li>
+            <img src="img/fot4.jpg" alt="">
+          </li>
+          <li>
+            <img src="img/fot6.jpg" alt="">
+          </li>
+          <li>
+            <img src="img/fot9.jpg" alt="">
+          </li>
+          <li>
+            <img src="img/Foto2.png" alt="">
+          </li>
+          <li>
+            <img src="img/Foto3.png" alt="">
+          </li>
+        </ul>
       </div>
       <div class="centro">
         <div class="info">
@@ -140,47 +129,7 @@
           </div>
         </div>
       </div>
-      <h3>Opiniones de nuestros alumnos</h3>
-      <div class="swiper mySwiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <h4>Jorgelina Doberminsky</h4>
-            <p>
-              Estoy muy agradecida con IACan por todo lo aprendido. Se nota su calidez y amor por los perros en cada una de sus clases.
-            </p>
-          </div>
-          <div class="swiper-slide">
-            <h4>Germán Ovejeiro</h4>
-            <p>
-              Es el segundo curso que hago en este lugar, todos los instructores son excelentes y estan en todos los detalles. 
-              Los recomiendo.
-            </p>
-          </div>
-          <div class="swiper-slide">
-            <h4>Ana Maria Maltes</h4>
-            <p>
-              Tengo 20 años en esta profesión pero quise formalizar mis estudios para darle más valor a mi marca personal. 
-              Definitivamente hice la mejor elección viniendo a IACan
-            </p>
-          </div>
-          <div class="swiper-slide">
-            <h4>Pastor Belgman</h4>
-            <p>
-              IACan me ha permitido poder responder a las exigencias actuales de mis clientes y poder brindarles lo mejor a nuestros 
-              mejores amigos cuadrúpedos.
-            </p>
-          </div>
-          <div class="swiper-slide">
-            <h4>Laura Beagle</h4>
-            <p>
-              Formar un can como acompañante es una gran responsabilidad. El instituto no solo me ha permitido dedicarme a esta 
-              hermosa profesión de manera responsable, sino que tambien crea el sentimiento de compromiso con su compañero humano 
-              en cada uno de los perros con los que se trabaja. Gracias IACan!
-            </p>
-          </div>
-        </div>
-        <div class="swiper-pagination"></div>
-      </div>
+      
       <div class="mapa">
         <h3>Donde estamos</h3>
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3284.066946732176!2d-58.3855831!3d-34.6024686!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac663e1c671%3A0x56cd23d36848e42f!2sLavalle%201334%2C%20C1055%20CABA!5e0!3m2!1ses!2sar!4v1696792927152!5m2!1ses!2sar" width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
@@ -207,33 +156,5 @@
         </div>
       </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-
-  <!-- Initialize Swiper -->
-  <script>
-    var swiper = new Swiper(".mySwiper", {
-      slidesPerView: 3,
-      spaceBetween: 10,
-      pagination: {
-        el: ".swiper-pagination",
-        clickable: true,
-      },
-      breakpoints: {
-        640: {
-          slidesPerView: 1,
-          spaceBetween: 20,
-        },
-        768: {
-          slidesPerView: 2,
-          spaceBetween: 40,
-        },
-        1024: {
-          slidesPerView: 3,
-          spaceBetween: 50,
-        },
-      },
-    });
-  </script>
   </body>
 </html>
