--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -51,7 +51,6 @@
             modificarlo, pudiendo trabajar de manera online o presencial según se adapte al caso.
           </p>
         </div>
-        
       </section>
       <section>
         <h2>Nuestros Entrenadores</h2>
@@ -151,7 +150,48 @@
             <a href="../archivos/Plan de Estudios.pdf" download>Plan de Estudios</a>
           </div>
         </div>
-      </section>        
+      </section>  
+      <h2>Opiniones de nuestros alumnos</h2>
+      <button class="pre-btn"><img src="../img/prev.png" alt=""></button>
+      <button class="nxt-btn"><img src="../img/next.png" alt=""></button>
+      <div class="swiper-container">
+        <div class="swiper-slide">
+          <h3>Germán Ovejeiro</h3>
+          <p>
+            Es el segundo curso que hago en este lugar, todos los instructores son excelentes y estan en todos los detalles. 
+            Los recomiendo.
+          </p>
+        </div>
+        <div class="swiper-slide">
+          <h3>Ana Maria Maltes</h3>
+          <p>
+            Tengo 20 años en esta profesión pero quise formalizar mis estudios para darle más valor a mi marca personal. 
+            Definitivamente hice la mejor elección viniendo a IACan
+          </p>
+        </div>
+        <div class="swiper-slide">
+          <h3>Pastor Belgman</h3>
+          <p>
+            IACan me ha permitido poder responder a las exigencias actuales de mis clientes y poder brindarles lo mejor a nuestros 
+            mejores amigos cuadrúpedos.
+          </p>
+        </div>
+        <div class="swiper-slide">
+          <h3>Laura Beagle</h3>
+          <p>
+            Formar un can como acompañante es una gran responsabilidad. El instituto no solo me ha permitido dedicarme a esta 
+            hermosa profesión de manera responsable, sino que tambien crea el sentimiento de compromiso con su compañero humano 
+            en cada uno de los perros con los que se trabaja. Gracias IACan!
+          </p>
+        </div>
+        <div class="swiper-slide">
+          <h3>Jorgelina Doberminsky</h3>
+          <p>
+            Estoy muy agradecida con IACan por todo lo aprendido. Se nota su calidez y amor por los perros en cada una de sus clases.
+          </p>
+        </div>
+      </div>
+  
     </main>
     <footer>
       <div class="datos">
@@ -174,5 +214,6 @@
         </div>
       </div>
     </footer>
+    <script src="../js/script.js"></script>
   </body>
 </html>
