--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
               de seguridad, cuáles son las acciones necesarias para que el can responda a los estímulos y la valorización del juego 
               como herramienta de enseñanza.</li>
           </ul>
+          <div class="mapa">
+            <h3>Donde estamos</h3>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3284.066946732176!2d-58.3855831!3d-34.6024686!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac663e1c671%3A0x56cd23d36848e42f!2sLavalle%201334%2C%20C1055%20CABA!5e0!3m2!1ses!2sar!4v1696792927152!5m2!1ses!2sar" width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
+          </div>
         </div>
         <div class="aside">
           <h4>Calendario de Eventos</h4>
@@ -127,13 +131,18 @@
               </li>
             </ul>
           </div>
+          <div class="clima">
+            <div class="icon">
+              <img src="img/clima.png" alt="clima">
+              <h3>El clima</h3>
+            </div>
+            <div class="text">La temperatura es de:  </div>
+            <div class="temp"></div>
+            <div class="summary"></div>
+            <div class="location"></div>
+          </div>
         </div>
-      </div>
-      
-      <div class="mapa">
-        <h3>Donde estamos</h3>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3284.066946732176!2d-58.3855831!3d-34.6024686!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac663e1c671%3A0x56cd23d36848e42f!2sLavalle%201334%2C%20C1055%20CABA!5e0!3m2!1ses!2sar!4v1696792927152!5m2!1ses!2sar" width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  
-      </div>
+      </div>      
     </main>
     <footer>
       <div class="datos">
@@ -156,5 +165,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/script.js"></script>
   </body>
 </html>
