--- a/pages/adiestradores.html
+++ b/pages/adiestradores.html
@@ -24,9 +24,6 @@
     </nav>
   </header>
   <main>
-    <p>
-      Acá van los filtros
-    </p>
     <div id="adiestradores">
       <div class="biselado">
         <div class="encabezado">
@@ -64,7 +61,7 @@
           <p><b>Contacto:</b> 11-4527-0026</p>
           <div class="barrios">
             <p><b>Barrios: </b></p>
-            <p>Caballito - Boedo - Villa Crespo - Almagro - Flores</p>
+            <p>Caballito - Boedo - Almagro - Flores</p>
           </div>
           <div class="puntaje">
             <p><b>Puntaje: </b>1 de 5</p>
@@ -811,10 +808,6 @@
         </div>
       </div>
     </div>
-
-
-
-
     <div class="registro">
       <a href="form-adiestrador.html" target="_blank">Si querés publicar hacé click acá</a>
     </div>
