--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -18,7 +18,7 @@
       <nav>
         <ul>
           <li><a href="../index.html" target="_self">Inicio</a></li>
-          <li><a href="#">Inscribite</a></li>
+          <li><a href="inscripciones.html">Inscribite</a></li>
           <li><a href="adiestradores.html" target="_self">Adiestradores</a></li>
           <li><a href="contacto.html" target="_blank">Contacto</a></li>
         </ul>
