--- a/pages/adiestradores.html
+++ b/pages/adiestradores.html
@@ -18,7 +18,7 @@
       <ul>
         <li><a href="../index.html" target="_self">Inicio</a></li>
         <li><a href="inscripciones.html" target="_self">Inscribite</a></li>
-        <li><a href="#">Adiestradores</a></li>
+        <li><a href="adiestradores.html">Adiestradores</a></li>
         <li><a href="contacto.html" target="_blank">Contacto</a></li>
       </ul>
     </nav>
