--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -19,7 +19,7 @@
                 <li><a href="../index.html" target="_self">Inicio</a></li>
                 <li><a href="inscripciones.html" target="_self">Inscribite</a></li>
                 <li><a href="adiestradores.html">Adiestradores</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
