--- a/pages/form-alumno.html
+++ b/pages/form-alumno.html
@@ -12,7 +12,7 @@
         <div class="contenedor">
             <img src="../img/IACan Logo.png" alt="Logo" class="logo-style" />
             <h1>Instituto de Adiestramiento Canino</h1>
-            <a href="ingresar"><img src="../img/inicio.png" alt="inicio" id="inicio"/></a>
+            <a href="form-login.html"><img src="../img/inicio.png" alt="inicio" id="inicio"/></a>
         </div>
         <nav>
             <ul>
