retocando y haciendo responsive cel

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <body>
     <header>
       <div class="contenedor">
-        <img src="img/IACan Logo.png" alt="Logo" class="logo-style" />
-        <h1>Instituto de Adiestramiento Canino</h1>
+        <div class="responsive">
+          <img src="img/IACan Logo.png" alt="Logo" class="logo-style" />
+          <h1>Instituto de Adiestramiento Canino</h1>
+        </div>  
         <a href="pages/form-login.html"><img src="img/inicio.png" alt="inicio" id="inicio"/></a>
       </div>
       <nav> 
@@ -37,19 +39,7 @@
             <img src="img/fot3.jpg" alt="">
           </li>
           <li>
-            <img src="img/fot4.jpg" alt="">
-          </li>
-          <li>
-            <img src="img/fot6.jpg" alt="">
-          </li>
-          <li>
-            <img src="img/fot9.jpg" alt="">
-          </li>
-          <li>
-            <img src="img/Foto2.png" alt="">
-          </li>
-          <li>
-            <img src="img/Foto3.png" alt="">
+            <img src="img/fot4.png" alt="">
           </li>
         </ul>
       </div>
