--- a/pages/adiestradores.html
+++ b/pages/adiestradores.html
@@ -10,8 +10,10 @@
 <body>
   <header>
     <div class="contenedor">
-      <img src="../img/IACan Logo.png" alt="Logo" class="logo-style" />
-      <h1>Instituto de Adiestramiento Canino</h1>
+      <div class="responsive">
+        <img src="../img/IACan Logo.png" alt="Logo" class="logo-style" />
+        <h1>Instituto de Adiestramiento Canino</h1>
+      </div>  
       <a href="form-login.html"><img src="../img/inicio.png" alt="inicio" id="inicio"/></a>
     </div>
     <nav>
