Poner div footer en formulario adiestradores

--- a/pages/form-adiestrador.html
+++ b/pages/form-adiestrador.html
@@ -279,10 +279,12 @@
     </div>
     <div class="red">
       <h4>Nuestras Redes Sociales</h4>
+      <div>
       <a href="#"><img src="../img/whatsapp.png" alt="whatsapp"></a>
       <a href="#"><img src="../img/facebook.png" alt="facebook"></a>
       <a href="#"><img src="../img/instagram.png" alt="instagram"></a>
       <a href="#"><img src="../img/twitter.png" alt="twitter"></a>
+      </div>
     </div>
   </footer>
   </body>
