Responsive Form Contacto

--- a/pages/form-alumno.html
+++ b/pages/form-alumno.html
@@ -71,7 +71,7 @@
     <br>
     <div class="dato_u">
         <label for="mail_u">Correo electrónico:</label>
-        <input size="50" type="email" id="mail_u" name="mail_u" placeholder="Ingrese su correo electrónico aquí 'ejemplo@mail.com'" required/>
+        <input size="50" type="number" id="mail_u" name="mail_u" placeholder="Ingrese su correo electrónico aquí 'ejemplo@mail.com'" required/>
     </div>     
     <br>
     <div class="dato_u">
