--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -27,29 +27,34 @@
     </header>
     <main>
         <form id="contact">
-            <h1>Datos de Contacto</h1>
             <fieldset class="recuadro">
+            <legend>Datos de Contacto</legend>
             <div class="linea">
                 <label for="nombre">Nombre</label>
-                <input size="30" type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre aquí" required>
+                <input size="20" type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre aquí" required>
             </div>
+            <br>
             <div class="linea">
                 <label for="apellido">Apellido</label>
-                <input size="30" type="text" name="apellido" id="apellido" placeholder="Ingrese su apellido aquí" required>    
+                <input size="20" type="text" name="apellido" id="apellido" placeholder="Ingrese su apellido aquí" required>    
             </div>
+            <br>
             <div class="linea">
                 <label for="mail">Correo Electrónico</label>
-                <input type="email" name="mail" id="mail" placeholder="ejemplo@mail.com"required>
+                <input size="50" type="email" name="mail" id="mail" placeholder="ejemplo@mail.com"required>
             </div>
+            <br>
             <div class="linea">
                 <label for="phone">Teléfono</label>
                 <input type="number" name="phone" id="phone" placeholder="Ej 11 5555 5555" required>
             </div>
+            <br>
             <div class="linea">
             <label for="msjType">Mensaje</label>
+            <br>
                 <textarea id="msjType" cols="30" rows="10" placeholder="Su mensaje" required></textarea>
             </div>
-            </fieldset>   
+            </fieldset> 
             <div>
                 <input type="submit" value="Enviar" class="button">
             </div>
